--- a/Web projects/Lab1/css/header.css
+++ b/Web projects/Lab1/css/header.css
@@ -1,14 +1,3 @@
-* {
-    padding: 0;
-    margin: 0;
-    outline: none;
-    text-decoration: none;
-}
-
-html {
-    background-color: rgb(41, 44, 48);
-}
-
 header {
     background-color: rgb(50, 53, 57);
 
@@ -32,6 +21,8 @@ header {
 
     border-radius: 50%;
     margin-bottom: 0.625rem;
+
+    mask: url(#masking);
 }
 
 .name {
@@ -91,6 +82,6 @@ header {
     align-items: center;
 }
 
-.socials-icon img{
+.socials-icon img {
     width: 3.125rem;
 }
