--- a/Web projects/Lab1/css/default.css
+++ b/Web projects/Lab1/css/default.css
@@ -7,6 +7,7 @@
 
 html {
     background-color: rgb(41, 44, 48);
+    font-family: Montserrat;
 }
 
 .hidden {
@@ -22,4 +23,8 @@ b {
     background: -webkit-linear-gradient(rgb(122,137,222), rgb(73, 76, 103));
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+
+img {
+    user-select: none;
 }
