--- a/Web projects/Lab1/css/default.css
+++ b/Web projects/Lab1/css/default.css
@@ -3,6 +3,8 @@
     margin: 0;
     outline: none;
     text-decoration: none;
+
+    scrollbar-color: #2c2e2f #484c4e;
 }
 
 html {
@@ -15,7 +17,7 @@ html {
 }
 
 p {
-    margin-bottom: 16px;
+    margin-bottom: 1rem;
 }
 
 b {
@@ -27,4 +29,21 @@ b {
 
 img {
     user-select: none;
+}
+
+::-webkit-scrollbar {
+    background-color: #2c2e2f;
+    color: #969188;
+}
+::-webkit-scrollbar-thumb {
+    background-color: #484c4e;
+}
+::-webkit-scrollbar-thumb:hover {
+    background-color: #565b5e;
+}
+::-webkit-scrollbar-thumb:active {
+    background-color: #4a4f51;
+}
+::-webkit-scrollbar-corner {
+    background-color: #252728;
 }
