--- a/Web projects/Lab1/css/main.css
+++ b/Web projects/Lab1/css/main.css
@@ -1,11 +1,11 @@
 main {  
-    width: 70%;
+    width: 68%;
 
     display: flex;
     flex-flow: column;
 
-    padding: 15px 25px;
-    margin: 75px auto;
+    padding: 0.9375rem 1.5625rem;
+    margin: 4.6875rem auto;
 }
 
 section {
@@ -15,7 +15,7 @@ section {
     flex-flow: column;
     align-items: center;
 
-    border-radius: 20px;
+    border-radius: 1.25rem;
     overflow: hidden;
 
     transition: box-shadow 0.15s linear 0s, transform 0.15s linear 0s;
@@ -23,9 +23,9 @@ section {
 }
 
 section:hover {
-    box-shadow: 15px -15px 15px -4px rgb(16, 19, 23);
+    box-shadow: 0.9375rem -0.9375rem 0.9375rem -0.25rem rgb(16, 19, 23);
 
-    transform: translate(-15px, 15px);
+    transform: translate(-0.9375rem, 0.9375rem);
 }
 
 .main-section {
@@ -33,20 +33,20 @@ section:hover {
 }
 
 .about-me {
-    width: 700px;
+    width: 43.75rem;
     height: 100%;
 }
 
 .title {
     background-color: rgb(63, 66, 93);
 
-    font: 30px Montserrat, sans-serif;
+    font: 1.875rem Montserrat, sans-serif;
     color: honeydew;
 
     width: 60%;
-    height: 50px;
+    height: 3.125rem;
 
-    padding-top: 3px;
+    padding-top: 0.1875rem;
     box-sizing: border-box;
 
     display: flex;
@@ -59,19 +59,19 @@ section:hover {
 }
 
 .section-content {
-    font: 20px Montserrat, sans-serif;
+    font: 1.25rem Montserrat, sans-serif;
     color: honeydew;
 
     width: 100%;
     height: 100%;
     
-    margin-top: 20px;
+    margin-top: 1.25rem;
     box-sizing: border-box;
-    padding: 0 20px;
+    padding: 0 1.25rem;
 }
 
 .prog-lang {
-    padding-left: 16px;
+    padding-left: 1rem;
 }
 
 .section-column {
@@ -83,7 +83,7 @@ section:hover {
     display: flex;
     flex-flow: row nowrap;
 
-    margin-bottom: 20px;
+    margin-bottom: 2.5rem;
 }
 
 .space-between {
@@ -91,37 +91,37 @@ section:hover {
 }
 
 .skills {
-    width: 550px;
-    height: 480px;
+    width: 34.375rem;
+    height: 30rem;
 
-    margin-bottom: 20px;
+    margin-bottom: 2.5rem;
 }
 
 .skill {
     display: flex;
     flex-flow: column nowrap;
 
-    margin-bottom: 26px;
+    margin-bottom: 1.625rem;
 }
 
 .skill-title {
-    font: 24px Montserrat, sans-serif;
+    font: 1.5rem Montserrat, sans-serif;
     font-weight: 500;
     color: honeydew;
 
-    padding-left: 5px;
+    padding-left: 0.3125rem;
 }
 
 .skill-bar {
     position: relative;
 
     width: 100%;
-    height: 32px;
+    height: 2rem;
 
     background-color: rgb(41, 44, 48);
-    margin-top: 10px;
+    margin-top: 0.625rem;
 
-    border-radius: 7px;
+    border-radius: 0.4375rem;
     overflow: hidden;
 }
 
@@ -133,7 +133,7 @@ section:hover {
     width: 0;
 
     background: linear-gradient(to right, rgb(73, 76, 103), rgb(122,137,222));
-    background-size: 510px;
+    background-size: 31.875rem;
 }
 
 .skill-progress-max {
@@ -159,8 +159,8 @@ section:hover {
 }
 
 .education {
-    width: 550px;
-    height: 150px;
+    width: 34.375rem;
+    height: 9.375rem;
 }
 
 .education-place {
@@ -173,27 +173,27 @@ section:hover {
     flex-flow: row;
     align-items: center;
 
-    margin-bottom: 6px;
+    margin-bottom: 0.375rem;
 }
 
 .education-place-icon {
-    padding-right: 10px;
-    width: 24px;
+    padding-right: 0.625rem;
+    width: 1.5rem;
 }
 
 .education-place-branch {
-    font-size: 16px;
-    padding-left: 35px;
+    font-size: 1rem;
+    padding-left: 2.1875rem;
 }
 
 .education-place-years {
-    font-size: 14px;
+    font-size: 0.875rem;
     opacity: 0.6;
 }
 
 .trainings {
-    width: 700px;
-    height: 480px;
+    width: 43.75rem;
+    height: 30rem;
 }
 
 .training {
@@ -201,12 +201,12 @@ section:hover {
     flex-flow: row;
 
     align-items: center;
-    margin-bottom: 26px;
+    margin-bottom: 1.625rem;
 }
 
 .training-year {
     font-weight: 600;
-    width: 80px
+    width: 5rem
 }
 
 .training-info {
@@ -217,24 +217,23 @@ section:hover {
 
 .training-company {
     font-weight: 500;
-    margin-bottom: 5px;
+    margin-bottom: 0.3125rem;
 }
 
 .training-name {
-    font-size: 19px;
+    font-size: 1.1875rem;
 }
 
 .last-project {
-    width: 550px;
+    width: 34.375rem;
 }
 
 .github {
-    margin-bottom: 20px;
+    margin-bottom: 2.5rem;
 }
 
 .ascii-image {
     margin: 0 auto;
-    margin-bottom: 20px;
 }
 
 #ascii-content {
@@ -248,7 +247,7 @@ section:hover {
 }
 
 .code-example {
-    width: 550px;
+    width: 34.375rem;
 }
 
 .code-method {
